--- a/src/components/toggleButton/ToggleButton.css
+++ b/src/components/toggleButton/ToggleButton.css
@@ -7,8 +7,8 @@
 
 .toggleButtonContainer {
   position: relative;
-  height: 1.8rem;
-  width: 3.3rem;
+  height: 1.7rem;
+  width: 3.1rem;
 }
 
 .toggleButton {
@@ -23,8 +23,8 @@
 .toggleButton:before {
   content: "";
   position: absolute;
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 1.4rem;
+  height: 1.4rem;
   left: 0.2rem;
   top: 0.15rem;
   border-radius: 50%;
